--- a/index.html
+++ b/index.html
@@ -28,6 +28,33 @@
 </head>
 <body>
 
+    <!-- Hadding Section -->
+    <section class="container mx-auto mt-16">
+
+        <header class="grid grid-cols-2">
+            <!-- Title Section -->
+            <div class="hedear-left  space-y-[30px]">
+                <h1 class="text-[80px] font-extrabold">It's good <br> tea time at The <br> Tea Hous</h1>
+                <p class="text-[18px] font-medium text-[#777777] w-[513px]">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button class="bg-linear-to-r from-[#FF8938] to-[#FF0000] text-white w-[200px] h-[64px] rounded-xl"> Explore More
+                    <span> <i class="fa-solid fa-arrow-right-long -rotate-45"></i> </span>
+                </button>
+            </div>
+            <!-- Logo Section -->
+            <div class="hedear-right relative">
+                <img src="./images/banner.png" alt="">
+                <div class="rating bg-white shadow-2xl flex justify-center items-center w-[255px] h-[100px]         rounded-xl gap-3 py-[19px] px-[26px] absolute left-[65px] bottom-[60px]">
+                    <img src="./images/banner-rating.png" alt="">
+                    <div class="">
+                        <h1 class="text-[30px] font-extrabold ">5.00</h1>
+                        <p class="text-[18px] font-semibold text-[#777777]">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+
+        </header>
+
+    </section>
 
        
     
