--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <!-- Card Section -->
-    <section class="container mx-auto mt-[140px]">
+    <section class="container mx-auto">
 
         <!-- Card Discription section -->
          <div class="discription text-center">
@@ -108,6 +108,209 @@
          </div>
 
     </section>
+
+    <!-- Decerotion Section -->
+    <section class=" container mx-auto mt-[160px] mb-[130px]">
+
+        <div class="grid grid-cols-2 gap-14">
+
+            <!-- Box Section -->
+            <div class="box grid grid-cols-2 grid-rows-6 gap-[30px]">
+
+                    <div class="box  row-span-2 rounded-xl bg-linear-to-r from-[#FF0000]/20 to-[#FF8938]/20"></div>
+                    <div class="box row-span-4 rounded-xl  bg-[#E6A623]/10 flex justify-center items-center">
+                        <img src="./images/fresh-1.png" alt="">
+                    </div>
+                    <div class="box row-span-4 rounded-xl  bg-[#577639]/10 flex justify-center items-center">
+                        <img src="./images/fresh-2.png" alt="">
+                    </div>
+                    <div class="box  row-span-2 rounded-xl  bg-linear-to-r from-[#D9D9D9]/50 to-[#FFFFFF]"></div>
+
+            </div>
+
+            <!-- Text Section -->
+            <div class="text ">
+
+                <h1 class="text-[45px] font-extrabold mt-[20px]">Great Tea, Freshly <br> Presented</h1>
+                <p class="text-[18px] font-medium text-[#777777] w-[580px] mb-[30px]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+
+                <h3 class="text-[20px] font-extrabold mb-[10px]">Unique Taste</h3>
+                <p class="text-[18px] font-medium text-[#777777] mb-5">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+
+                <h3 class="text-[20px] font-extrabold mb-[10px]">Premium Quality</h3>
+                <p class="text-[18px] font-medium text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Client Section -->
+    <section class="container mx-auto bg-linear-to-r from-[#FF8938] to-[#FF0000] mb-[130px]">
+        <div class="content grid grid-cols-2 gap-9 py-[85px] px-[70px]">
+
+            <!-- Discription -->
+            <div class="client-section-left text-white">
+                <h1 class="text-[45px] font-extrabold mb-[20px]">Meet Our Super Clients</h1>
+                <p class="text-[16px] font-medium mb-[30px] text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <button class="w-[139px] h-[56px] bg-white rounded-2xl text-red-400 text-[20px] font-bold">Show All</button>
+            </div>
+
+            <!-- Review Card -->
+            <div class="client-section-right">
+
+                <div class="review-card bg-white rounded-xl w-[433px] h-[233px]">
+                    <div class="contant p-[45px] relative ">
+                        <p class="text-[16px] font-medium text-[#777777] mb-[20px]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+
+                        <h3 class="text-[18px] font-bold">Ilham Yuda</h3>
+                        <p class="text-[16px] font-medium text-[#777777]">Businessman</p>
+
+                        <div class="absolute -left-[20px] -top-[20px] ">
+                            <img src="./images/client.png" alt="" class="bg-white p-1.5 rounded-full">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
+
+    <!-- Marketing Section -->
+     <section class="container mx-auto">
+
+        <div class="content">
+
+            <!-- Event Discription -->
+            <div class="text-center">
+                <h1 class="text-[45px] font-extrabold mb-[20px]">News & Events</h1>
+                <p class="text-[18px] font-semibold text-[#777777] mb-[50px] w-[900px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+
+            <!-- Event Card -->
+             <div class="flex justify-center items-center gap-6 mb-[110px]">
+
+                <div class="border border-gray-200 p-[22px] ">
+                <div class="flex justify-center items-center mb-[20px]">
+                    <img src="./images/news-1.png" alt="">
+                </div>
+                    <div class="text-start">
+                        <p class="text-[16px] font-medium text-[#777777] mb-[10px]">Feb 05, 2027</p>
+                        <h3 class="text-[20] font-extrabold mb-[10px]">Collecting 8 points for discount</h3>
+                        <p class="text-[16] font-medium text-[#777777] mb-[10px]"> There are many variations of passages of <br> Lorem Ipsum available.</p>
+                        <h4 class="text-[16px] font-bold mb-[10px]">Learn More</h4>
+                    </div>
+                 </div>
+                <div class="border border-gray-200 p-[22px] ">
+                <div class="flex justify-center items-center mb-[20px]">
+                    <img src="./images/news-2.png" alt="">
+                </div>
+                    <div class="text-start">
+                        <p class="text-[16px] font-medium text-[#777777] mb-[10px]">Feb 05, 2027</p>
+                        <h3 class="text-[20] font-extrabold mb-[10px]">Collecting 8 points for discount</h3>
+                        <p class="text-[16] font-medium text-[#777777] mb-[10px]"> There are many variations of passages of <br> Lorem Ipsum available.</p>
+                        <h4 class="text-[16px] font-bold mb-[10px]">Learn More</h4>
+                    </div>
+                 </div>
+                <div class="border border-gray-200 p-[22px] ">
+                <div class="flex justify-center items-center mb-[20px]">
+                    <img src="./images/news-3.png" alt="">
+                </div>
+                    <div class="text-start">
+                        <p class="text-[16px] font-medium text-[#777777] mb-[10px]">Feb 05, 2027</p>
+                        <h3 class="text-[20] font-extrabold mb-[10px]">Collecting 8 points for discount</h3>
+                        <p class="text-[16] font-medium text-[#777777] mb-[10px]"> There are many variations of passages of <br> Lorem Ipsum available.</p>
+                        <h4 class="text-[16px] font-bold mb-[10px]">Learn More</h4>
+                    </div>
+                 </div>
+
+             </div>
+
+        </div>
+
+     </section>
+
+    <!-- Footer Section -->
+     <section class="bg-amber-50">
+
+        <div class=" container mx-auto py-[120px] px-[230px]">
+
+            <!-- Top Section -->
+            <div class="top-section flex justify-between items-center mb-[100px]">
+                <div class="">
+                    <img src="./images/cup.png" alt="">
+                </div>
+                <div class="flex justify-between items-center gap-10 ">
+                    <p class="text-[20px] font-medium text-[#494949]">Ready to get strated?</p>
+                    <button class="bg-linear-to-r from-[#FF8938] to-[#FF0000] text-white w-[200px] h-[64px] rounded-xl">Get Started</button>
+                </div>
+            </div>
+
+            <!-- Bottom Section -->
+            <div class="bottom-section">
+
+                <div class="mani-container flex justify-between items-center">
+
+                    <div class="section space-y-[22px]">
+                        <h3 class="text-[20px] font-bold">Quick Links</h3>
+                        <p class="text-[16px] text-[#494949]">Home</p>
+                        <p class="text-[16px] text-[#494949]">About Us</p>
+                        <p class="text-[16px] text-[#494949]">Insurance</p>
+                        <p class="text-[16px] text-[#494949]"> Privacy Policy</p>
+                    </div>
+                    <div class="section">
+                        <div class="section space-y-[22px]">
+                        <h3 class="text-[20px] font-bold">Quick Links</h3>
+                        <p class="text-[16px] text-[#494949]">Home</p>
+                        <p class="text-[16px] text-[#494949]">About Us</p>
+                        <p class="text-[16px] text-[#494949]">Insurance</p>
+                        <p class="text-[16px] text-[#494949]"> Privacy Policy</p>
+                    </div>
+                    </div>
+                    <div class="section">
+                        <div class="section space-y-[22px]">
+                        <h3 class="text-[20px] font-bold">Quick Links</h3>
+                        <p class="text-[16px] text-[#494949]">Home</p>
+                        <p class="text-[16px] text-[#494949]">About Us</p>
+                        <p class="text-[16px] text-[#494949]">Insurance</p>
+                        <p class="text-[16px] text-[#494949]"> Privacy Policy</p>
+                    </div>
+                    </div>
+                    <div class="section space-y-[42px]">
+                        <div class="text-[24px] font-semibold">
+                            <h2>Subscribe to our <br> newsletter</h2>
+                        </div>
+                        <div class="">
+                            <input type="text" placeholder="Email address" class="text-[16px] font-semibold text-[#494949] border-b-2 p-3">
+                            <span class="bg-linear-to-r from-[#FF8938] to-[#FF0000] text-white w-[200px] h-[64px] rounded-full p-2"> <i class="fa-solid fa-angle-right"></i> </span>
+                        </div>
+                        <div class=" flex gap-2">
+
+                            <div class="">
+                                <span> <i class="fa-brands fa-facebook-f"></i> </span>
+                            </div>
+                            <div class="">
+                                <span> <i class="fa-brands fa-square-instagram"></i> </span>
+                            </div>
+                            <div class="">
+                                <span> <i class="fa-brands fa-youtube"></i> </span>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="mt-[100px] text-center">© 2027 UIDesign.to - All rights reserved.</div>
+
+        </div>
+
+     </section>
 
        
     
